k8s/manifests/base/apps/streamlit/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-streamlit-fallback@kubernetescrd
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/session-cookie-name: "streamlit-affinity"
spec:
  rules:
    - host: streamlit.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-svc
                port:
                  number: 80
